# graphrag-codebase

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yml  mkdocs.yml  pyproject.toml
config/schemas/: ansible.yaml  generic.yaml  python.yaml
docs/: index.md
docs/api/: agents.md  extractors.md  mcp-tools.md
docs/architecture/: 5-layer-design.md  extension-points.md  extractors.md  graph-schema.md  overview.md
docs/deployment/: docker.md  kubernetes.md  production-checklist.md
docs/developer-guide/: adding-extractors.md  adding-mcp-tools.md  adding-parsers.md  contributing.md  testing.md
docs/getting-started/: configuration.md  docker-compose.md  installation.md  quickstart.md
docs/javascripts/: mermaid.js
docs/reference/: changelog.md  cli-reference.md  environment-variables.md  glossary.md  mcp-tools-reference.md  schema-reference.md  schemas.md
docs/user-guide/: building-graphs.md  mcp-tools.md  querying-graphs.md  troubleshooting.md  web-ui.md
llamastack/: graphrag_ui.py
llamastack/config/: run.yaml
scripts/: _common.py  build_graph.py  clone_and_build.py  create_agent.py  migrate_to_multi_repo.py  register_agent.py
src/: __init__.py  config.py  git_utils.py
src/agents/: __init__.py  base_agent.py  graphrag_agent.py  memory.py
src/extractors/: __init__.py  base_extractor.py  collector.py  registry.py
src/extractors/ansible/: __init__.py  ansible_extractor.py  playbook_extractor.py  role_extractor.py  variable_extractor.py
src/extractors/generic/: __init__.py  file_extractor.py
src/extractors/python/: __init__.py  class_extractor.py  function_extractor.py  module_extractor.py
src/graph/: __init__.py  builder.py  queries.py  schema.py
src/indexing/: __init__.py  graph_index.py
src/mcp/: context.py  http_server.py  server.py
src/mcp/tools/: __init__.py  dependency_tools.py  playbook_tools.py  query_tools.py  role_tools.py  variable_tools.py
src/mcp/utils/: __init__.py  circuit_breaker.py  cypher_validator.py  graphrag_client.py  neo4j_connection.py  path_sanitizer.py  prompt_templates.py  query_guardrails.py  rate_limiter.py  tracing.py
src/parsers/: __init__.py  base_parser.py  jinja_parser.py  python_parser.py  ruby_parser.py  yaml_parser.py
tests/: __init__.py  test_agent_api.py  test_circuit_breaker.py  test_generic_extractor.py  test_graphrag_client.py  test_llamaindex_integration.py  test_parsers.py  test_path_sanitization.py  test_python_extractor.py  test_query_guardrails.py  test_query_timeout.py  test_rate_limiting.py  test_repo_detection.py  test_schema_profiles.py  test_schema_validation.py
